starts the html markup

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>G3 Architects</title>
     <link rel="stylesheet" href="styles/style.css">
   </head>
-  <body>
+  <body class="work-sans-font">
     <!-- header start -->
     <header>
       <!-- nav start -->
-      <nav>
-        <h3>G3 Architects</h3>
+      <nav class="navbar">
+        <h3 class="brand">G3 Architects</h3>
         <ul>
           <li><a href="">home</a></li>
           <li><a href="">About</a></li>
