--- a/index.html
+++ b/index.html
@@ -4,42 +4,113 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>G3 Architects</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body class="work-sans-font">
     <!-- header start -->
-    <header>
+    <header class="header bg-light">
       <!-- nav start -->
-      <nav class="navbar">
+      <nav class="navbar display-flex">
         <h3 class="brand">G3 Architects</h3>
-        <ul>
-          <li><a href="">home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Contact Us</a></li>
-          <li><a href="">Login</a></li>
+        <ul class="nav-links display-flex">
+          <li class="nav-items">
+            <a href="" class="nav-link text-gray">Home</a>
+          </li>
+          <li class="nav-items">
+            <a href="" class="nav-link text-gray">About</a>
+          </li>
+          <li class="nav-items">
+            <a href="" class="nav-link text-gray"> Contact Us</a>
+          </li>
+          <li class="nav-items">
+            <a href="" class="nav-link text-gray">Login</a>
+          </li>
         </ul>
       </nav>
       <!-- nav end -->
 
       <!-- banner start -->
-      <section>
-        <h1>Brand New Group of Architects</h1>
-        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-        <button>Explore More</button>
-        <img src="images/banner.png" alt="">
-      </section>
+      <div class="banner">
+        <div class="banner-content">
+          <h1 class="banner-title">Brand New Group of Architects</h1>
+          <p class="banner-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+        <img class="banner-image" src="images/banner.png" alt="" />
+      </div>
       <!-- banner end -->
     </header>
     <!-- header end -->
 
     <!-- main start -->
     <main>
+        <!-- team section start -->
+      <section class="teams display-flex">
+        <div class="team-image-container">
+            <img src="images/team1.png" alt="">
+            <img src="images/team2.png" alt="">
+            <img src="images/team3.png" alt="">
+            <img src="images/team4.png" alt="">
+        </div>
+
+        <div class="our-features">
+          <h3 class="section-title">Quick list of Our Features</h3>
+          <p class="feature-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
+
+       <!-- team section end-->
+
+       <!-- feature will enjoy start -->
         <section>
 
         </section>
-        <section></section>
-        <section></section>
-        <section></section>
+       <!-- feature will enjoy end -->
+
+        <!-- some facts start-->
+        <section>
+           
+             <section class="some-facts">
+                <h3 class="section-title">Some Facts</h3>
+
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+                <div class="facts-container">
+                    <div class="fact">
+                        <img src="" alt="" class="fact-icon">
+                        <h4 class="fact-number"></h4>
+                        <h5 class="fact-name"></h5>
+                    </div>
+                    <div class="fact">
+                        <img src="" alt="" class="fact-icon">
+                        <h4 class="fact-number"></h4>
+                        <h5 class="fact-name"></h5>
+                    </div>
+                    <div class="fact">
+                        <img src="" alt="" class="fact-icon">
+                        <h4 class="fact-number"></h4>
+                        <h5 class="fact-name"></h5>
+                    </div>
+                    <div class="fact">
+                        <img src="" alt="" class="fact-icon">
+                        <h4 class="fact-number"></h4>
+                        <h5 class="fact-name"></h5>
+                    </div>
+                </div>
+             </section>
+        </section>
+       <!-- some facts end -->
+
+      <!--  -->
     </main>
     <!-- main end -->
 
